<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="company">COMPANY</string>
    <string name="company_detail">%1$s was founded by %2$s in year %3$s. it has now %4$s employees, %5$s launch sites, and is valued at USD %6$s</string>
    <string name="launches">LAUNCHES</string>
    <string name="days_since_from_now">Days{since/from} now:</string>
    <string name="rocket">Rocket:</string>
    <string name="date_time">Date/Time :</string>
    <string name="mission">Mission :</string>
    <string name="rocket_name">%1$s / %2$s</string>
    <string name="day_duration">today - %1$s</string>
    <string name="date_and_time">%1$s at %2$s</string>
    <string name="enter_year">Enter Year</string>
    <string name="submit_year">Submit Year</string>
</resources>