<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.screens.MainActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/Theme.MyApplication.PopupOverlay" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/screen_Layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:id="@+id/company_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="Space X"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="@id/screen_Layout"
                app:layout_constraintStart_toStartOf="@id/screen_Layout"
                app:layout_constraintTop_toTopOf="@id/screen_Layout"/>

            <TextView
                android:id="@+id/company_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:paddingVertical="15sp"
                android:paddingStart="15sp"
                android:text="@string/company"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@id/screen_Layout"
                app:layout_constraintStart_toStartOf="@id/screen_Layout"
                app:layout_constraintTop_toBottomOf="@+id/company_name" />

            <ProgressBar
                android:id="@+id/company_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="@+id/company_details"
                app:layout_constraintBottom_toBottomOf="@+id/company_details"
                app:layout_constraintEnd_toEndOf="@+id/company_details"
                app:layout_constraintStart_toStartOf="@+id/company_details" />


            <TextView
                android:id="@+id/company_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/company_detail"
                android:layout_marginVertical="10dp"
                android:padding="15dp"
                app:layout_constraintTop_toBottomOf="@+id/company_title" />

            <TextView
                android:id="@+id/launch_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:paddingVertical="15sp"
                android:paddingStart="15sp"
                android:text="@string/launches"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@id/screen_Layout"
                app:layout_constraintStart_toStartOf="@id/screen_Layout"
                app:layout_constraintTop_toBottomOf="@+id/company_details" />
            <ProgressBar
                android:id="@+id/launch_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="@+id/launch_list"
                app:layout_constraintBottom_toBottomOf="@+id/launch_list"
                app:layout_constraintEnd_toEndOf="@+id/launch_list"
                app:layout_constraintStart_toStartOf="@+id/launch_list" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/launch_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                app:layout_constraintEnd_toEndOf="@id/screen_Layout"
                app:layout_constraintStart_toStartOf="@id/screen_Layout"
                app:layout_constraintTop_toBottomOf="@+id/launch_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>